# fabric-cli

./: .changie.yaml  .coveragerc  .gitattributes  .gitignore  404.html  AGENTS.md  CONTRIBUTING.md  MANIFEST.in  README.md  SUPPORT.md  index.html  issue-172.md  mkdocs.yml  mypy.ini  pylock.toml  pyproject.toml  pytest.ini  python313support.md  requirements-dev.txt  requirements-docs.txt  requirements.txt  sitemap.xml  tox.toml
.ai-assets/: README.md
.ai-assets/context/: CLAUDE.md  README.md  copilot-instructions.md  cursorrules.md
.ai-assets/modes/: README.md  fab.agent.md
.ai-assets/prompts/: README.md  analyze-semantic-model.prompt.md  create-lakehouse-pipeline.prompt.md  create-workspace.prompt.md  deploy-to-workspace.prompt.md  migrate-items.prompt.md  troubleshoot-refresh.prompt.md  workspace-audit.prompt.md
.ai-assets/skills/: README.md
.changes/: header.tpl.md  v0.1.10.md  v0.1.9.md  v0.2.0.md  v1.0.0.md  v1.0.1.md  v1.1.0.md  v1.2.0.md  v1.3.0.md  v1.3.1.md  v1.4.0.md  v1.5.0.md  v1.6.0.md  v1.6.1.md
.changes/unreleased/: added-20251016-155856.yaml  added-20251111-133907.yaml  added-20251111-144602.yaml  added-20251111-150900.yaml  added-20251111-210116.yaml  added-20251113-131349.yaml  added-20251120-025450.yaml  added-20251120-143304.yaml  added-20251127-151831.yaml  added-20251127-181226.yaml  added-20251209-141353.yaml  added-20251211-183425.yaml  added-20251231-171025.yaml  added-20260101-125718.yaml  added-20260129-133802.yaml  added-20260205-113248.yaml  added-20260205-125443.yaml  added-20260209-171617.yaml  added-20260219-122814.yaml  added-20260223-073505.yaml  added-20260305-091728.yaml  added-20260307-205227.yaml  added-20260403-104100.yaml  added-20260403-104412.yaml  added-20260407-201800.yaml  added-20260417-105920.yaml  added-20260512-150558.yaml  added-20260618-043404.yaml  added-20260625-145755.yaml  added-20260630-143000.yaml  added-20260630-223439.yaml  added-20260701-121400.yaml  added-20260705-133158.yaml  added-20260706-091126.yaml  added-20260710-000000.yaml  added-sqldatabase-creationpayload.yaml  breaking-20260106-084254.yaml  docs-20251130-120623.yaml  docs-20251225-091556.yaml  docs-20260104-094108.yaml  (+60 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml  3-question.yml  4-documentation.yml  5-copilot.yml
.github/agents/: docs-writer.agent.md  new-item-type.agent.md
.github/instructions/: commands.instructions.md  test.instructions.md
.github/policies/: resourceManagement.yml
.github/prompts/: bug-triage.prompt.yml  documentation-triage.prompt.yml  feature-triage.prompt.yml  question-triage.prompt.yml
.github/workflows/: ai-issue-triage.yml  changelog-existence.yml  create-release.yml  documentation.yml  fab-build.yml  semantic-pull-request.yml  version-bump.yml
agent-docs/SKILL/: index.html
commands/: index.html
commands/acls/: index.html
commands/api/: index.html
commands/auth/: index.html
commands/config/: index.html
commands/desc/: index.html
docs/: index.md  release-notes.md  troubleshooting.md
examples/: index.html
release-notes/: index.html
scripts/: install_dev_container_dependencies.sh
search/: search_index.json
tests/: authoring_tests.md  conftest.py  test_main.py
troubleshooting/: index.html
(+1748 files in other folders)
