[project]
name = "ms-fabric-cli"
authors = [{ name = "Microsoft Corporation" }]
description = "Command-line tool for Microsoft Fabric"
readme = "README.md"
dynamic = ["version"]
license = "MIT"
requires-python = ">=3.10,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
]
dependencies = [
    "msal[broker]>=1.34,<2 ; platform_system != 'Linux'",
    "msal>=1.34,<2",
    "msal_extensions",
    "questionary",
    "prompt_toolkit>=3.0.41",
    "cachetools>=5.5.0",
    "jmespath",
    "pyyaml==6.0.2",
    "argcomplete>=3.6.2",
    "psutil==7.0.0",
    "requests",
    "cryptography",
]

[project.scripts]
fab = "fabric_cli.main:main"

[project.urls]
Repository = "https://github.com/microsoft/fabric-cli.git"

[dependency-groups]
dev = ["pytest>=8.2.1", "tox>=4.20.0", "build", "pytest-cov", "vcrpy"]
docs = ["mkdocs-material", "mkdocs-section-index"]

[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages.find.where = ["src"]
dynamic.version = { attr = "fabric_cli.__init__.__version__" }
package-data = { "fabric_cli.core.fab_config" = [
    "command_support.yaml",
], "fabric_cli.commands.fs" = [
    "payloads/*",
] }

[tool.mypy]

# Module-specific overrides
[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "msal.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "msal_extensions"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fabric_cli.utils.fab_mem_store"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pyspark.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
# Uncomment to enable live recording mode
# addopts = ["--record"]
markers = [
    "token_claims(arg): override the 'upn' or 'ctid' claim returned by get_token_claims",
]
